# halfway

./: .App.js.swp  .gitignore  App.js  HHLookup.py  README.md  app.json  halfway.db  halfwayDB.db  halfwayDBtransform.py  lookup.py  network.py  node-db-play.js  package.json  prompt.txt  server.py  serverJSON.py  testCommand.txt  tfl.db.schema
archive/android-client/: gradle.properties  settings.gradle
archive/expo-client-16/: App.js
archive/http-server/: server.py
archive/node-db/: node-db-play.js
backend/: pyproject.toml
backend/src/halfway_backend/: database.py  logic.py  main.py  models.py
backend/tests/: test_api.py  test_database.py  test_logic.py
db-builder/: build_db.py  dump_tfl.py  dump_tfl_concurrent.py  graph_times.py  halfway.db  lines.jsonl  stations.jsonl
db-builder/notebooks/: apiPlay.ipynb
db-builder/tfl-api/: apiPlay.ipynb  graph_times.py  lines.jsonl  routes.jsonl  stations.jsonl  tfl_api.py  times.jsonl
db-builder/tfl_data/: times.jsonl  transfers.jsonl
expo-client/: README.md  metro.config.js  package.json
expo-client-16/: .eslintrc.yml  App.js  app.json  package.json
expo-client-16/components/: database.js
expo-client-25/: app.json  package.json
expo-client-25/app/: index.tsx
expo-client-25/components/: AutocompleteInput.tsx  JourneyTime.js  database.js  database.ts
frontend/: index.html  script.js  style.css
halfway-app/: package.json
halfwayhouse/: build.gradle
http-server/: lookup.py  network.py  testCommand.txt
old/: exampleServerJSON.py
tubedata/: TubeNetwork.xls  halfway.db  stations.csv
(+19 files in other folders)
